--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ twitter_url: https://twitter.com/tanner_geo
 
 # build settings
 markdown: kramdown
+highlighter: rouge
 
 sass:
   style: compressed
